Basic CRUD for Album

--- a/module/Album/view/album/album/add.phtml
+++ b/module/Album/view/album/album/add.phtml
@@ -1,2 +1,23 @@
 <?php
- // module/Album/view/album/album/add.phtml:
+// module/Album/view/album/album/add.phtml:
+
+$title = 'Add new album';
+$this->headTitle($title);
+?>
+<h1><?php echo $this->escapeHtml($title); ?></h1>
+<?php
+$form->setAttribute('action', $this->url('album', array('action' => 'add')));
+$form->prepare();
+
+echo $this->form()->openTag($form);
+echo $this->formHidden($form->get('id'));
+echo $this->formRow($form->get('title'));
+?>
+<br>
+<?php
+echo $this->formRow($form->get('artist'));
+?>
+<br>
+<?php
+echo $this->formSubmit($form->get('submit'));
+echo $this->form()->closeTag();
