--- a/module/Album/view/album/album/edit.phtml
+++ b/module/Album/view/album/album/edit.phtml
@@ -1,2 +1,31 @@
 <?php
- // module/Album/view/album/album/edit.phtml:
+// module/Album/view/album/album/edit.phtml:
+
+$title = 'Edit album';
+$this->headTitle($title);
+?>
+<h1><?php echo $this->escapeHtml($title); ?></h1>
+
+<?php
+$form = $this->form;
+$form->setAttribute('action', $this->url(
+    'album',
+    array(
+        'action' => 'edit',
+        'id'     => $this->id,
+    )
+));
+$form->prepare();
+
+echo $this->form()->openTag($form);
+echo $this->formHidden($form->get('id'));
+echo $this->formRow($form->get('title'));
+?>
+<br>
+<?php
+echo $this->formRow($form->get('artist'));
+?>
+<br>
+<?php
+echo $this->formSubmit($form->get('submit'));
+echo $this->form()->closeTag();
